# latexFigureCodeGenerator

./: .editorconfig  CMakeLists.txt  README.md  latexFigureCodeGenerator.sln  latexFigureCodeGenertor.sln
2.file_io/: out.tex  out.txt
include/: latexfigurehelper.h
latexFigureCodeGenerator/: latexFigureCodeGenerator.vcxproj  latexfigurehelper.cpp  latexfigurehelper.ixx  main.cpp
latexFigureCodeGenertor/: latexFigureCodeGenertor.filters  latexFigureCodeGenertor.vcxproj  latexfigurehelper.ixx  main.cpp
src/: latexfigurehelper.cpp  latexfigurehelper.h  main.cpp
